force-app/main/default/objects/circle_area__c/circle_area__c.object-meta.xml
<CustomObject>
    <label>circle</label>
    <nameField>
        <label>circle area Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>circles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>