force-app/main/default/objects/circle_area__c/fields/area_of_circle__c.field-meta.xml
<CustomField>
    <fullName>area_of_circle__c</fullName>
    <formula>radius__c * radius__c *(22/7)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>area of circle</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>