force-app/main/default/objects/circle_area__c/fields/circumference_of_cicle__c.field-meta.xml
<CustomField>
    <fullName>circumference_of_cicle__c</fullName>
    <formula>2*(22/7)* radius__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>circumference of cicle</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>