force-app/main/default/objects/circle_area__c/fields/diameter_of_circle__c.field-meta.xml
<CustomField>
    <fullName>diameter_of_circle__c</fullName>
    <formula>2* radius__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>diameter of circle</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>