force-app/main/default/objects/circle_area__c/fields/radius__c.field-meta.xml
<CustomField>
    <fullName>radius__c</fullName>
    <label>radius</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>